Update and rename Basic_One.html to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing='20'>
         <tr>
             <td>
-                <img src="D:\Web Dev\1.HTML\IMG_1552.png" width="150">
+                <img src="IMG_1552.png" width="150">
             </td>
             <td>
                 <h1>Ahmad Lhony</h1>
@@ -66,8 +66,8 @@
 
 
     <hr>
-    <a href="D:\Web Dev\1.HTML\Hobbies.html">My Hobbies:</a>
-    <a href="D:\Web Dev\1.HTML\contact-me.html">Contact Me</a>
+    <a href="Hobbies.html">My Hobbies:</a>
+    <a href="contact-me.html">Contact Me</a>
 
 
 </body>
